modify retrieveAudioVideoInfo to return both audio/video info, refactor to run ffprobe once and pass avInfo into methods to get encoding operation and subtitles