@@ -9,6 +9,7 @@ import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 import static org.slf4j.LoggerFactory.getLogger;
 
@@ -30,34 +31,39 @@ public class AVInfoService {
      * @param options
      * @return
       */
-    private Map<String,String> retrieveAudioVideoInfo(Mp44uOptions options, String av) {
+    public Map<String,String> retrieveAudioVideoInfo(Mp44uOptions options) {
         // run ffprobe
         String inputFile = options.getInputPath().toString();
         String ffprobe = "ffprobe";
         String v = "-v";
         String quiet = "quiet";
-        String selectStreams = "-select_streams";
-        String selectedStreams = "";
-        if (av.contains("audio")) {
-            selectedStreams = "a:0";
-        } else if (av.contains("video")) {
-            selectedStreams = "v:0";
-        }
         String showEntries = "-show_entries";
         String entries = "stream=codec_name,height,bit_rate,index:stream_tags=language";
 
-        List<String> command = new ArrayList<>(Arrays.asList(ffprobe, v, quiet, selectStreams, selectedStreams,
+        List<String> command = new ArrayList<>(Arrays.asList(ffprobe, v, quiet,
                 showEntries, entries, inputFile));
         String ffprobeOutput = CommandUtility.executeCommand(command);
 
         // split ffprobe output around \n and filter for values containing =
         Map<String,String> avInfo = new HashMap<>();
-        List<String> streams = List.of(ffprobeOutput.split(System.lineSeparator()));
-        List<String> streamInfo = streams.stream()
-                .filter(str -> str.matches(".+=.*")).toList();
+        ArrayList<String> streams = new ArrayList<>(Arrays.asList(ffprobeOutput.split(System.lineSeparator())));
+        ArrayList<String> streamInfo = (ArrayList<String>) streams.stream()
+                .filter(str -> str.matches(".+=.*")).collect(Collectors.toList());
 
-        for (String stream : streamInfo) {
-            avInfo.put(stream.split("=")[0], stream.split("=")[1]);
+        // ffprobe output for video files contain 2 indexes: 0 for video, 1 for audio
+        if (streamInfo.contains("index=0") && streamInfo.contains("index=1")) {
+            int audioIndex = streamInfo.indexOf("index=1");
+            for (String stream : streamInfo) {
+                if (streamInfo.indexOf(stream) < audioIndex) {
+                    avInfo.put("video_" + stream.split("=")[0], stream.split("=")[1]);
+                } else {
+                    avInfo.put("audio_" + stream.split("=")[0], stream.split("=")[1]);
+                }
+            }
+        } else {
+            for (String stream : streamInfo) {
+                avInfo.put("audio_" + stream.split("=")[0], stream.split("=")[1]);
+            }
         }
 
         return avInfo;
@@ -66,23 +72,22 @@ public class AVInfoService {
     /**
      * Use AUDIO_ENCODE if false and AUDIO_COPY if true for all audio streams in file
      * codec_name: aac AND bit_rate <= 192000 (i.e., 192kbps)
-     * @param options
+     * @param avInfo
      * @return
      */
-    public EncodingOperation getAudioEncodingOperation(Mp44uOptions options) {
+    public EncodingOperation getAudioEncodingOperation(Map<String, String> avInfo) {
         EncodingOperation audioEncoding = EncodingOperation.ENCODE;
 
-        Map<String,String> avInfo = retrieveAudioVideoInfo(options, "audio");
         String codecName = "audio";
-        if (avInfo.get("codec_name") != null) {
-            codecName = avInfo.get("codec_name");
+        if (avInfo.get("audio_codec_name") != null) {
+            codecName = avInfo.get("audio_codec_name");
         }
 
         int bitRate = AUDIO_ENCODING_MIN_BIT_RATE + 1;
         try {
-            bitRate = Integer.parseInt(avInfo.get("bit_rate"));
+            bitRate = Integer.parseInt(avInfo.get("audio_bit_rate"));
         } catch (NumberFormatException e) {
-            log.warn("bit_rate not found: {}", e.getMessage());
+            log.warn("audio_bit_rate not found: {}", e.getMessage());
         }
 
         if (codecName.contains("aac") && bitRate <= AUDIO_ENCODING_MIN_BIT_RATE) {
@@ -95,30 +100,29 @@ public class AVInfoService {
     /**
      * Use VIDEO_ENCODE if false and VIDEO_COPY if true for all video streams in file
      * codec_name: h264 AND height: <=720 AND bit_rate <= 3000000 (i.e., 3Mbps)
-     * @param options
+     * @param avInfo
      * @return
      */
-    public EncodingOperation getVideoEncodingOperation(Mp44uOptions options) {
+    public EncodingOperation getVideoEncodingOperation(Map<String, String> avInfo) {
         EncodingOperation videoEncoding = EncodingOperation.ENCODE;
 
-        Map<String,String> avInfo = retrieveAudioVideoInfo(options, "video");
         String codecName = "video";
-        if (avInfo.get("codec_name") != null) {
-            codecName = avInfo.get("codec_name");
+        if (avInfo.get("video_codec_name") != null) {
+            codecName = avInfo.get("video_codec_name");
         }
 
         int height = VIDEO_ENCODING_MIN_HEIGHT + 1;
         try {
-            height = Integer.parseInt(avInfo.get("height"));
+            height = Integer.parseInt(avInfo.get("video_height"));
         } catch (NumberFormatException e) {
-            log.warn("height not found: {}", e.getMessage());
+            log.warn("video_height not found: {}", e.getMessage());
         }
 
         int bitRate = VIDEO_ENCODING_MIN_BIT_RATE + 1;
         try {
-            bitRate = Integer.parseInt(avInfo.get("bit_rate"));
+            bitRate = Integer.parseInt(avInfo.get("video_bit_rate"));
         } catch (NumberFormatException e) {
-            log.warn("bit_rate not found: {}", e.getMessage());
+            log.warn("video_bit_rate not found: {}", e.getMessage());
         }
 
         if (codecName.contains("h264") && height <= VIDEO_ENCODING_MIN_HEIGHT
@@ -131,14 +135,13 @@ public class AVInfoService {
 
     /**
      * Check for subtiltes in video file
-     * @param options
+     * @param avInfo
      * @return
      */
-    public Subtitles getSubtitles(Mp44uOptions options) {
+    public Subtitles getSubtitles(Map<String, String> avInfo) {
         Subtitles subtitles = Subtitles.NO_SUBTITLES;
 
-        Map<String,String> avInfo = retrieveAudioVideoInfo(options, "video");
-        if (avInfo.get("TAG:language") != null) {
+        if (avInfo.get("video_TAG:language") != null) {
             subtitles = Subtitles.SUBTITLES;
         }
         return subtitles;
